Bug 464631 - Tiny nit in core/job_error.cpp i18n message
Summary: Tiny nit in core/job_error.cpp i18n message
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-22 06:44 UTC by Oliver Kellogg
Modified: 2023-01-24 17:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.103
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Kellogg 2023-01-22 06:44:18 UTC
I found a tiny formatting nit in core/job_error.cpp function rawErrorDetail case KIO::ERR_CANNOT_CREATE_WORKER
(in commit 8a1662c of 2022-12-03 this is line 1255):
    "klauncher could not find or start the plugin which provides the protocol."
    "This means you may have an outdated version of the plugin."
Please insert a space at the end of the first line.
Comment 1 Nate Graham 2023-01-24 17:17:15 UTC
Git commit 4fc29c50497f1f6118fbd5eeb8be4ce90dd85fff by Nate Graham.
Committed on 24/01/2023 at 17:16.
Pushed by ngraham into branch 'master'.

job_error: add missing space between sentences for one string
FIXED-IN: 5.103

M  +1    -1    src/core/job_error.cpp

https://invent.kde.org/frameworks/kio/commit/4fc29c50497f1f6118fbd5eeb8be4ce90dd85fff
Comment 2 Nate Graham 2023-01-24 17:17:37 UTC
Git commit 50dddb69582fddc1f4577c1ab3a3fab37a5bb7cf by Nate Graham.
Committed on 24/01/2023 at 17:17.
Pushed by ngraham into branch 'kf5'.

job_error: add missing space between sentences for one string
FIXED-IN: 5.103
(cherry picked from commit 4fc29c50497f1f6118fbd5eeb8be4ce90dd85fff)

M  +1    -1    src/core/job_error.cpp

https://invent.kde.org/frameworks/kio/commit/50dddb69582fddc1f4577c1ab3a3fab37a5bb7cf