job_error: add missing space between sentences for one string

BUG: 464631
FIXED-IN: 5.103
(cherry picked from commit 4fc29c50497f1f6118fbd5eeb8be4ce90dd85fff)